@@ -34,6 +34,10 @@ Sun Jan 20 12:15:18 GMT 2002	Riley Williams <rhw@MemAlpha.cx>
 
 	* Version number display actually committed.
 	* Formatting clean-ups in Menuconfig script.
+	* Two Makefiles were excluded from `make nodep` due to a typo,
+	  so fixed it to include them as well.
+	* Updated arch/i86/defconfig to reflect reality.
+	* Removed autoconf.h from CVS as it's generated by compiler.
 
 Sun Jan 20 01:09:25 EET 2002	Jacek Lipkowski <sq5bpf@acid.ch.pw.edu.pl>
 
